Rheia: - remove carousel animation except when using control buttons Rheia: - fix moderation map menu z-index, and multiple click triggering

--- a/rheia/style/widget.styl
+++ b/rheia/style/widget.styl
@@ -250,6 +250,9 @@ a.ui-button:not(.ui-button-icon-only):not(.ui-button-text-icon-secondary):not(.u
     .selection
       opacity 0.5
 
+  .menu
+    z-index 100000
+
 .map-item
   position absolute
   overflow hidden
